fixed line spacing and size on some of the copy text

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;900&display=swap');
 
 body {
     background-color: lightblue;
@@ -45,15 +45,26 @@ body {
 }
 
 .copy-title {
+    font-weight: bold;
     font-size: 58px;
+    line-height: 50px;
 }
 
 .copy-body {
+    padding-top: 20px;
     font-size: 20px;
+    font-weight: 200;
 }
 
 .copy-footer {
-margin: 10px 0px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18````px;
+    font-weight: bold;
+    margin: 10px 0px;
+}
+
+#footer-arrow {
+    font-size: 25px;
 }
 
 .menu-meals {
